Replaced recordings file location

--- a/_pages/recordings.html
+++ b/_pages/recordings.html
@@ -3,4 +3,4 @@ layout: home-page
 title: About
 permalink: /recordings/
 ---
-{% include /recordings/recordings.html %}
+{% include /recordings.md %}
