--- a/index.html
+++ b/index.html
@@ -18,7 +18,11 @@ layout: home-page
         {% for tag in post.tags %}
         <a href="{{site.baseurl}}/tags#{{tag}}" class="tag">|&#32;{{ tag }}</a>
         {% endfor %}
+        {% if post.external_url %}
+        <a href="{{post.external_url}}" target="_blank" class="post-card-link"><h3 class="post-card-title">{{post.title}}</h3></a>
+        {% else %}
         <a href="{{post.url | prepend: site.baseurl}}" class="post-card-link"><h3 class="post-card-title">{{post.title}}</h3></a>
+        {% endif %}
       </div>
 
     </div>
