Fixed small issue

--- a/_pages/about.html
+++ b/_pages/about.html
@@ -68,7 +68,7 @@ permalink: /about/
       {% endif %}
 
       {% if site.speakerdeck %}
-        <li class="speakerdeck"><a href="https://speakerdeck.com/{{site.pinterest}}" target="_blank"><i class="fa fa-slideshare"></i></a></li>
+        <li class="speakerdeck"><a href="https://speakerdeck.com/{{site.speakerdeck}}" target="_blank"><i class="fa fa-slideshare"></i></a></li>
       {% else %}
         <li class="speakerdeck"><a href="https://speakerdeck.com/" target="_blank"><i class="fa fa-slideshare" aria-hidden="true"></i></a></li>
       {% endif %}
